Add Post endpoint to add new books